--- a/ToDo-version-7/styles/lista-tareas.css
+++ b/ToDo-version-7/styles/lista-tareas.css
@@ -3,6 +3,16 @@ body{
   background: #020417;
   background-size: cover;
   margin: 0;
+  
+}
+#bg{
+  position: absolute;
+  width: 100vw;
+  min-height: 100vh;
+  object-fit: contain;
+  top: 0;
+  overflow: hidden;
+
 }
 header {
   display: flex;
@@ -10,7 +20,7 @@ header {
   box-shadow: 0px 3px 5px black;
   padding: 0 3em;
   margin-bottom: 2em;
- 
+ /* z-index: 999; */
 }
 
 .bgContainer{
@@ -30,13 +40,14 @@ header {
   border-style: none;
   margin-bottom: 4px;
   cursor: pointer;
+  border-radius: 10px;
 }
 .menu-btn{
   display: none;
   
 }
 .menu-btn:checked ~ .bgContainer {
-  left: 0;
+  left: -10px;
   transition: ease-in-out 1s;
 
   
@@ -144,16 +155,15 @@ a, .menu-icon{
 .not-done {
   width: 2em;
   height: 2em;
-  background-color: rgba(255, 255, 255, .4);
+  background-color: transparent;
   margin-right: 1em;
   border-radius: 50%;
   cursor: pointer;
   text-align: center;
-  color: grey;
+  z-index: 999;
+  
 }
-.change i{
-color: green;
-}
+
 
 /* Lista de tareas ----------------------------------------------------------- */
 
@@ -177,15 +187,20 @@ color: green;
   position: relative;
   height: 1.5em;
   width: 1.5em;
-  background-color: rgba(255, 255, 255, .4);
+  background-color: transparent;
   box-shadow: 2px 2px 5px black;
   border: 2px solid var(--secondary);
-  z-index: 2;
+  z-index: 999;
   transition: background-color 200ms linear;
 }
+.fa-check{
+  color: white;
+  z-index: 998;
+  position: absolute;
+  }
 
 .tarea .not-done:hover {
-  background-color: rgba(255, 255, 255, .4);;
+  color: greenyellow;
 }
 
 .tarea:first-child .not-done::before {
