--- a/scss/social.scss
+++ b/scss/social.scss
@@ -33,7 +33,7 @@
   }
 
   a:nth-child(1) i {
-    color: #5b5e62;
+    color: gray;
   }
   a:nth-child(2) i {
     color: #735acf;
@@ -48,7 +48,7 @@
     color: var(--main);
   }
   a:nth-child(5) i {
-    color: #5b5e62;
+    color: gray;
   }
   a:hover {
     transform: translate(-130px, 0);
