--- a/Heroes/index/css/style.css
+++ b/Heroes/index/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Mouse+Memoirs&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@30&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 /********** Body *******/
@@ -8,8 +8,9 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
 main {
-  background-color: #364f6b;
+  background: linear-gradient(to bottom, #3fc1c9 10%, transparent);
 }
 .descuento {
   background-color: #3fc1c9;
@@ -18,32 +19,28 @@ main {
   font-size: 1rem;
   color: #393e46;
   letter-spacing: 5px;
-  font-family: "Mouse Memoirs", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 /******* Header *******/
 header {
   font-size: 2rem;
-
   color: #f5f5f5;
-
-  position: sticky;
   top: 0;
   z-index: 100;
-
   background-color: #fc5185;
 }
 header h1 {
   padding: 0 2rem;
-  letter-spacing: 5px;
-  font-family: "Bangers", cursive;
-  
+  font-family: 'Roboto', sans-serif;
+  text-transform:uppercase;
 }
 header ul li a {
   text-decoration: none;
-  color: #364f6b;
-  font-size: 2rem;
+  color: white;
+  font-size: 1rem;
   padding: 5px;
+  text-transform:uppercase;
 }
 header ul li {
   display: inline-block;
@@ -52,9 +49,8 @@ nav {
   background-color: #3fc1c9;
   text-align: right;
   padding: .5rem 2rem;
-  font-family: "Mouse Memoirs", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
-  
 }
 
 /******main******/
@@ -106,6 +102,8 @@ nav {
 .ww #corazon,
 .superman #corazon {
   padding: 1.4rem;
+  font-size: 2rem;
+  color: #fc5185;
 }
 
 .card-text {
@@ -115,35 +113,47 @@ nav {
   align-items: center;
   text-align: justify;
   background: #f5f5f5;
-  font-family: "Bangers", cursive;
+  font-family: 'Roboto', sans-serif;
   line-height: 2rem;
+  height: 400px;
+  
   /* line-height: para poner interlineado */
+}
+h2{
+  font-weight: lighter;
+  line-height: 2rem;
+  text-transform:uppercase;
 }
 .card-text p {
   padding: 1rem;
+  
 }
-
-/* .card-button a{
+.card-button {
+  text-align: center;
+}
+ .card-button a{
     padding: 1rem;
     color: white;
     display: inline-block;
     text-decoration: none;
     background-color: #00669F;
-} */
+
+} 
 
 footer {
   padding: 1rem 2rem;
 
-  text-align: left;
+  background: transparent;
   display: flex;
-  justify-content: space-between;
-  color: #393e46;
-  font-family: "Mouse Memoirs", sans-serif;
-  font-size: 1.5rem;
+  justify-content: center;
+  color: #364f6b;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1rem;
 }
 .git {
   text-decoration: none;
-  color: #393e46;
+  color: #364f6b;
+  padding-left: 5px;
   
 }
 
