background img banner - arrows wordChanger

--- a/Heroes/index/css/style.css
+++ b/Heroes/index/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@30&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Mouse+Memoirs&display=swap');
+
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 /********** Body *******/
@@ -10,30 +12,33 @@
 }
 
 main {
-  background: linear-gradient(to bottom, #3fc1c9 10%, transparent);
+  background: linear-gradient(to bottom,#3fc1c9, #80aead, #a19b91, #b88677, #000);
 }
 .descuento {
   background-color: #3fc1c9;
   text-align: right;
   padding: 3px 2rem 3px;
-  font-size: 1rem;
-  color: #393e46;
-  letter-spacing: 5px;
+  font-size: 0.8rem;
+  color: #f5f5f5;
+  letter-spacing: 2px;
   font-family: 'Roboto', sans-serif;
 }
 
 /******* Header *******/
 header {
   font-size: 2rem;
-  color: #f5f5f5;
+  color: #3fc1c9;
   top: 0;
   z-index: 100;
-  background-color: #fc5185;
+  background-color: #f5f5f5;
+  position: sticky;
 }
 header h1 {
   padding: 0 2rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Bangers", cursive;
   text-transform:uppercase;
+  font-weight: bold;
+  letter-spacing: 5px;
 }
 header ul li a {
   text-decoration: none;
@@ -41,6 +46,8 @@ header ul li a {
   font-size: 1rem;
   padding: 5px;
   text-transform:uppercase;
+  font-size: 1.5rem;
+
 }
 header ul li {
   display: inline-block;
@@ -49,20 +56,22 @@ nav {
   background-color: #3fc1c9;
   text-align: right;
   padding: .5rem 2rem;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
+  font-family: "Mouse Memoirs", sans-serif;
+  
 }
 
 /******main******/
 .container {
   padding: 2rem 0;
-  display: flex;
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  grid-template-columns: 1fr 1fr 1fr minmax(160px, 1fr); 
   justify-content: center;
   color: #364f6b;
+  
 }
 .card {
-  height: 50%;
-  width: 50%;
+  height: 100%;
   padding: 1rem;
   
 }
@@ -92,7 +101,7 @@ nav {
 .superman #fotito {
   position: absolute;
   border-radius: 50%;
-  bottom: -60px;
+  bottom: -50px;
   height: 50%;
   left: calc(50% - 50px);
 }
@@ -115,7 +124,7 @@ nav {
   background: #f5f5f5;
   font-family: 'Roboto', sans-serif;
   line-height: 2rem;
-  height: 400px;
+  height: 184px;
   
   /* line-height: para poner interlineado */
 }
@@ -125,18 +134,32 @@ h2{
   text-transform:uppercase;
 }
 .card-text p {
-  padding: 1rem;
+  margin: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 18px;     /* fallback */
+  max-height: 60px;      /* fallback */
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
   
 }
 .card-button {
   text-align: center;
+  width: 100%;
+  background: #fc5185;
+  
+}
+.card-button button{
+  border: none;
+  background: #fc5185;
 }
  .card-button a{
     padding: 1rem;
     color: white;
     display: inline-block;
     text-decoration: none;
-    background-color: #00669F;
+    background-color: #fc5185;
 
 } 
 
@@ -160,9 +183,11 @@ footer {
 /********** Responsive ************/
 @media screen and (max-width: 768px) {
   /* tablet */
+
   .container {
-    flex-wrap: wrap;
+    grid-template-columns: 1fr 1fr minmax(160px, 1fr); 
   }
+  
   .card {
     width: 50vw;
   }
@@ -180,7 +205,7 @@ footer {
 @media screen and (max-width: 480px) {
   /* celular  */
   .container {
-    flex-direction: column;
+    grid-template-columns: 1fr  minmax(160px, 1fr); 
   }
   .descuento p{
     text-align: center;
