--- a/ToDo-version-7/styles/ingreso.css
+++ b/ToDo-version-7/styles/ingreso.css
@@ -1,6 +1,6 @@
-@import url('./common.css');
+@import url("./common.css");
 
-#bd1{
+#bd1 {
   display: flex;
   overflow: hidden;
   justify-content: flex-end;
@@ -8,11 +8,10 @@
   margin: 0;
 }
 
-
 h1 {
-  color: #F4F6FD;
+  color: #f4f6fd;
   font-weight: 300;
-  margin: .5em 0;
+  margin: 0.5em 0;
 }
 
 form {
@@ -26,64 +25,54 @@ form {
   z-index: 2;
   padding: 1em 2.5em;
   box-sizing: border-box;
-
 }
-
-
-
 
 input {
   width: 100%;
-  padding: .4em .5em;
+  padding: 0.4em 0.5em;
   background-color: #020417;
-  border: 1px solid #373B5E;
+  border: 1px solid #373b5e;
   border-radius: 1em;
   font-weight: 300;
-  margin-bottom: -.1em;
+  margin-bottom: -0.1em;
   margin-top: 1em;
   font-size: 1.2em;
-  color: #9D9AB4;
+  color: #9d9ab4;
 }
 
 input:focus {
   outline-color: blueviolet;
-  border: 1px solid #F4F6FD;
+  border: 1px solid #f4f6fd;
 }
 
-
 button {
-  padding: .5em 3em;
-  background-color: #373B5E;
-  color: #F4F6FD;
+  padding: 0.5em 3em;
+  background-color: #373b5e;
+  color: #f4f6fd;
   margin-top: 2em;
   font-weight: 300;
   font-size: 1.2em;
-  
 }
 
 .form-header {
-  color: #F4F6FD;
+  color: #f4f6fd;
   font-size: 2em;
 }
-.ingresarA{
+.ingresarA {
   text-align: center;
   text-decoration: none;
-  color: #9D9AB4;
+  color: #9d9ab4;
 }
-.ingresarA a{
-  
+.ingresarA a {
   text-decoration: none;
-  color: #9D9AB4;
+  color: #9d9ab4;
 }
-.left{
-  
-}
-.left img{
+.left img {
   max-width: 100vw;
   max-height: 100vh;
-  }
-.right{
-  background-color: #020417;
+}
+.right {
+  background: linear-gradient(to bottom right, black, #020417, #47375e);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -91,8 +80,8 @@ button {
   justify-content: center;
 }
 
-.logIn{
-  background: linear-gradient(to right, black, #020417,#47375e);
+.logIn {
+  background: linear-gradient(to bottom right, black, #020417, #47375e);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -101,9 +90,23 @@ button {
   left: 50vw !important;
 }
 
-
-#spinner{
-  width: 50%;
+.spinner {
+  border: 7px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: blueviolet;
+  border-top-color: cyan;
   display: none;
-  margin: 0 auto;
+  animation: spin 1s ease infinite;
+  margin-top: 3rem;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
